[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "slugify>=0.0.1",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
    "uuid>=1.30",
    "uvicorn>=0.48.0",
]
